--- a/api/package.json
+++ b/api/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "csvtojson": "^2.0.10",
     "node-fetch": "^2.6.0",
     "sha1": "^1.1.1"
   }
