--- a/package.json
+++ b/package.json
@@ -1,26 +1,24 @@
 {
-  "name": "communityserves",
+  "name": "svelte-app",
   "version": "1.0.0",
-  "description": "communityserves.community",
-  "main": "index.js",
-  "directories": {
-    "doc": "docs"
-  },
   "scripts": {
-    "start": "cd docs && ws"
+    "build": "rollup -c",
+    "dev": "rollup -c -w",
+    "start": "sirv public"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/aaronhans/communityserves.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/aaronhans/communityserves/issues"
-  },
-  "homepage": "https://github.com/aaronhans/communityserves#readme",
   "devDependencies": {
-    "local-web-server": "^4.2.0"
+    "@rollup/plugin-commonjs": "^12.0.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^8.0.0",
+    "node-sass": "^4.14.1",
+    "rollup": "^2.3.4",
+    "rollup-plugin-livereload": "^1.0.0",
+    "rollup-plugin-svelte": "^5.0.3",
+    "rollup-plugin-terser": "^5.1.2",
+    "svelte": "^3.0.0",
+    "svelte-preprocess": "^3.9.7"
+  },
+  "dependencies": {
+    "sirv-cli": "^0.4.4"
   }
 }
