--- a/.github/workflows/publishpages.yml
+++ b/.github/workflows/publishpages.yml
@@ -6,6 +6,7 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@master
+      - run: npm install
       - run: npm run build
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v1.1.0
